--- a/deesain amel.html/index66.html
+++ b/deesain amel.html/index66.html
@@ -17,7 +17,7 @@ body {
 }
 /* styling header */
 header {
-    background-color: #7cd3ff;
+    background-color: #000000;
     color: rgb(248, 248, 247);
     padding: 15px;
     font-size: 24px;
